## Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libroman_cal.la
libroman_cal_la_SOURCES = roman_cal.c roman_cal.h

bin_PROGRAMS = main
main_SOURCES = main.c
main_LDADD = libroman_cal.la

#https://www.gnu.org/software/automake/manual/automake.html#amhello_0027s-Makefile_002eam-Setup-Explained
